more post reclicense cleanup
During the recent re-license to BSD with all of the authors
approval a few files got missed that had old license details in them.  Remove
those old license details so the new project wide BSD license agreed to by
all the authors clearly applies to these files as well.

Signed-off-by: Joel Schopp <jschopp@linux.vnet.ibm.com>

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 trousers README
 
   Trousers is an open-source TCG Software Stack (TSS), released under
-the Common Public License. Trousers aims to be compliant with the
+the BSD License. Trousers aims to be compliant with the
 1.1b and 1.2 TSS specifications available from the Trusted Computing
 Group website:
 
