--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+* TROUSERS_0_3_12
+- Added new network code for RPC, which supports IPv6
+- Users of client applications can configure the hostname of the tcsd server
+they want to connect through the TSS_TCSD_HOSTNAME env var (only works if
+application didn't set a hostname in the context)
+- Added disable_ipv4 and disable_ipv6 config options for server
+
+* TROUSERS_0_3_11
+- Fix build process for distros
+- License was changed from GPL to BSD
+- Many bugfixes
+- updated man pages
+
 * TROUSERS_0_3_8
 
 - Fix ssl_ui.c overflow
