--- a/README
+++ b/README
@@ -20,7 +20,7 @@ Discussion of the internals of the TrouSerS implementation:
   trousers-tech@lists.sf.net
 
 Possibly sensitive security related bugs:
-  Debora Velarde <dvelarde@us.ibm.com>
+  Richard Maciel <rmaciel@linux.vnet.ibm.com>
 
 Run-of-the-mill bug reports should use the TrouSerS bug tracker:
   http://sourceforge.net/tracker/?group_id=126012&atid=704358
